--- a/weather2.html
+++ b/weather2.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+
+    <input>
     <script>
     //0a892a0445d3a24086cd5fa02dec86ac
     let url = `https://api.openweathermap.org/data/2.5/weather?q=Houston&APPID=0a892a0445d3a24086cd5fa02dec86ac`
@@ -26,7 +28,7 @@
         //to show the user the result
         let body = document.querySelector('body')
         body.innerHTML = degFRound.toString(); 
-    })
+    }) //dfd
     </script>
 </body>
 </html>
