list of characters complete

--- a/gameOfThrones.html
+++ b/gameOfThrones.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div>
+        <ul>
+
+            
+        </ul>
+
+    </div>
     Game Of Thrones
     <script src= "GOThrones.js"></script>
 </body>
